@@ -7,6 +7,7 @@ no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
 in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
+* [2018-06-22] RFC4880: added tmcg_openpgp_stringtokey_t
 * [2018-06-21] RFC4880: added AlgorithmHashTextName(), DashEscapeFile()
 * [2018-06-19] RFC4880: added some stuff for cleartext signature framework
 * [2018-06-17] mpz_srandom: use additional Botan RNG, if configured --with-botan
